Adding new columns in UserEntity and ClinicEntity
